tests/NormalTests/paczka1/small_fuzzy/37032016.err
Error in line 2: 7TvuMeNPh3 S98 67,7
Error in line 3: UmGQ A513 49,7
Error in line 5: 7TvuMeNPh3 A798 61,5
Error in line 8: UmGQ A825 3,6
